@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-3
-Date: 2011-10-15
+Date: 2011-10-16
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
