@@ -1,4 +1,5 @@
 0.8-1
+- s4 classes: Oce Ctd (testing)
 - add support for RBR 'rsk' files
 - plot.section() now uses 'col' if supplied
 0.7-1
